--- a/package.json
+++ b/package.json
@@ -16,24 +16,27 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^5.0.5",
+    "@types/express": "^5.0.6",
     "@types/morgan": "^1.9.10",
-    "@types/node": "^22.13.9",
+    "@types/node": "^22.19.8",
     "dotenv": "^17.2.3",
-    "tsx": "^4.19.3",
-    "typescript": "^5.8.2",
-    "vite": "^7.2.4",
-    "vitest": "^4.0.13"
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3",
+    "vite": "^7.3.1",
+    "vitest": "^4.0.18"
   },
   "dependencies": {
     "@types/cors": "^2.8.19",
+    "@types/swagger-ui-express": "^4.1.8",
+    "argon2": "^0.44.0",
     "cor": "^0.0.0",
     "cors": "^2.8.6",
-    "express": "^5.1.0",
+    "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
-    "mongodb": "^7.0.0",
-    "morgan": "^1.10.1"
+    "mongodb": "^7.1.0",
+    "morgan": "^1.10.1",
+    "swagger-ui-express": "^5.0.1"
   },
   "packageManager": "pnpm@10.6.1+sha512.40ee09af407fa9fbb5fbfb8e1cb40fbb74c0af0c3e10e9224d7b53c7658528615b2c92450e74cfad91e3a2dcafe3ce4050d80bda71d757756d2ce2b66213e9a3"
 }
